# NEC

./: CHARWITHSTRING.C  README.md  STRINGLITERAL.C
ASSIGNMENT-5/: pointeraddtion.c  pointercomprasion.c  pointersubtraction.c  preprocesserdirective.c  strcmp.c  stringstrcat.c  strlen.c  strlw.c  strrev.c  tempCodeRunnerFile.c
ASSINMENT-7/: Preprocessor_directive.c  mallocerror.c  postincrement.c  preincrement.c  preproceser2.c  snprintf.c  sprintf.c  sscanf.c  strscspn.c  strspn.c
Assignment-1/: agrument with return function .c  arrayof pointer.c  mallocDMA.C  nesteded structure.c  pointerbasic.c  pointerfunctionn.c  return  type with no argument function .c  structure.c  union.c
Assignment-4/: CALLBYREFRENCE.C  CALLBYVALUE.C  DMAMALLOC.C  POINTERADDITION.C  POINTERINCREMENT.C
asssignment-3/: finalprogam.c  mainn.c
cmake/: Add.cpp  Add.h  CMakeLists.txt  main.cpp
variable/: extrenvariable.C  extrenvariable1.C  staticlocal.cpp  ststicgloabal2.cpp  variablescope.cpp
